<resources>
    <!--  general purpose  -->
    <string name="app_name">Lovebird Disease</string>
    <string name="app_copyright">Hak cipta © 2019 Ki Joko Bodo</string>

    <!--  splashscreen  -->
    <string name="splashscreen_applogo_img">Logo aplikasi pada splashscreen</string>
    <string name="splashscreen_applogo_text">teks logo splashscreen</string>

    <!--  home  -->
    <string name="home_logo_img">Logo aplikasi pada home</string>
    <string name="home_mulai_action">mulai</string>

    <!--  input  -->
    <string name="diagnosis_pilih_gejala_text">Pilih gejala yang timbul</string>
    <string name="diagnosis_logo_img">Gambar logo pada diagnosis</string>
    <string name="diagnosis_empty_msg">Gejala tidak boleh kosong</string>
    <string name="diagnosis_applogo_text_img">gambar teks pada diagnosis</string>

    <!--  hasil  -->
    <string name="hasil_gejala_dialami_text">Gejala yang dialami</string>
    <string name="hasil_diagnosis_penyakit_text">Diagnosis penyakit</string>
    <string name="hasil_solusi_text">Solusi</string>
    <string name="hasil_diagnosis_text">Hasil Diagnosis</string>
    <string name="hasil_green_dot_img">gambar titik hijau pada item hasil</string>
    <string name="hasil_pencegahan_text">Pencegahan</string>
    <string name="hasil_hasil_text">Hasil</string>

    <!--  item  -->
    <string name="item_gejala_img">gambar gejala yang dialami</string>

    <!--  nama penyakit  -->
    <array name="array_nama_penyakit">
        <item>Cacingan</item>
        <item>Kutu Burung</item>
        <item>Mencret Bakteri</item>
        <item>Berak Kapur</item>
        <item>Snot</item>

        <item>Bubul</item>
        <item>Virus Burung</item>
        <item>Pernapasan</item>
    </array>

    <!--  deskripsi penyakit  -->
    <array name="array_deskripsi_penyakit">
        <item>Umumnya terjadi karena virus, jaga kebersihan kandang dan jaga kandang agar tetap
            terkena sinar matahari sehingga virus tidak berkembang biak.
        </item>
        <item>Sering mandikan dan jemur burung agar bebas dari kutu burung.</item>
        <item>Diakibatkan tempat makan dan minum burung yang kotor sehingga cacing dapat berkembang
            biak.
        </item>
        <item>Sering bersihkan kandang, tempat makan dan minum. Bersihkan tempat kotor dengan
            bioseptik. Pisahkan burung terinfeksi dari yang lain.
        </item>
        <item>Disebabkan oleh virus. Jaga kebersihan kandang dan segera obati burung yang sedang
            sakit.
        </item>

        <item>Disebabkan oleh bakteri. Bersihkan kandang secara rutin.</item>
        <item>Virus menyerang daya tahan tubuh burung. Jaga kebersihan kandang dan jaga kandang agar
            tatap terkena sinar matahari, sehingga virus sulit berkembang biak.
        </item>
        <item>Penyakit dapat menular kepada anak jika induk terjangkit. Pisahkan induk atau anak
            yang terkena penyakit dari yang lain. Obati burung sakit tersebut.
        </item>
    </array>

    <!--  kode gejala  -->
    <array name="array_kode_gejala">
        <item>G001</item>
        <item>G002</item>
        <item>G003</item>
        <item>G004</item>
        <item>G005</item>

        <item>G006</item>
        <item>G007</item>
        <item>G008</item>
        <item>G009</item>
        <item>G010</item>

        <item>G011</item>
        <item>G012</item>
        <item>G013</item>
        <item>G014</item>
        <item>G015</item>

        <item>G016</item>
        <item>G017</item>
        <item>G018</item>
    </array>

    <!--  nama gejala  -->
    <array name="array_nama_gejala">
        <item>Nafsu makan menurun</item>
        <item>Kotoran cair</item>
        <item>Bulu tidak rapi</item>
        <item>Kurang bergairah/lemas</item>
        <item>Bobot burung menurun</item>

        <item>Jarang berkicau</item>
        <item>Sering menggigit bulu</item>
        <item>Kotoran berwarna keruh</item>
        <item>Kotoran berbau busuk</item>
        <item>Banyak kutu</item>

        <item>Sayap menggantung</item>
        <item>Mata berair</item>
        <item>Mata bengkak</item>
        <item>Kaki bengkak</item>
        <item>Kuku memanjang</item>

        <item>Lemah</item>
        <item>Kelumpuhan anggota badan</item>
        <item>Kotoran seperti kapur</item>
    </array>

    <!--  bobot  -->
    <array name="array_bobot_gejala">
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>5</item>
        <item>5</item>

        <item>4</item>
        <item>3</item>
        <item>5</item>
        <item>5</item>
        <item>4</item>

        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
        <item>3</item>

        <item>1</item>
        <item>4</item>
        <item>5</item>
    </array>
</resources>
